[TASK][#45] Bootstrap Container

--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/component/component.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/component/component.twig
@@ -6,6 +6,8 @@
         include '@namespace/folder/template.twig'
     </p>   
     {% include '@object/objects/object.twig' %}
+    {% include '@object/objects/object--v1.twig' %}
+    {% include '@object/objects/object-other/object-other.twig' %}
 
     <h3>Übergabe des Textes von dem object</h3>
     <p>
