--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/objects/object.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/objects/object.twig
@@ -3,3 +3,7 @@
      <p>Text object: {{ lorem(100, 'max 100') }}</p>
      <p>Text lorem from config: {{ text }}</p>
 </div>
+
+{% include '@object/paragraph/paragraph.twig' %}
+{% include '@object/objects/object--v1.twig' %}
+{% include '@object/objects/object-other/object-other.twig' %}
