--- a/app/backend/packages/starter_freya/frontend/src/scss/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/scss/_index.scss
@@ -2,4 +2,5 @@
 @import '2-tools/index';
 @import '3-generic/index';
 @import '4-elements/index';
-@import '5-utilities/index';
+@import '5-ui/index';
+@import '6-utilities/index';
