--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/_index.scss
@@ -1,5 +1,5 @@
 // @import 'objects/index';
 @import 'buttons/index';
-@import 'icon/index';
-@import 'image/index';
-@import 'paragraph/index';
+@import 'icons/index';
+@import 'images/index';
+@import 'paragraphs/index';
