[TASK] Änderung der Verzeichnisnamen in Plural-Schreibweise

--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/containers/container.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/containers/container.twig
@@ -1,9 +1,9 @@
 {#
 containerComponent: Enthält die jeweilige Komponente
 containerUid: Uid der Komponente
-containerComponentType: Typ der Komponente
+containerComponentType: Typ der Kompomente
 
-Wenn es einen Hintergrund über volle Breite gibt, gibt es einen Wrapper.
+Wenn es einen Hintergrund über volle breite gibt, gibt es einen Wrapper.
 Der eigentliche Container ist container-inner.twig
 #}
 
