[TASK] container template code cleanup

--- a/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-container/p-container.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-container/p-container.twig
@@ -5,14 +5,14 @@
 
 
 
-{% extends '@container' %}
+{% extends '@component/containers/container.twig' %}
 
-{% block component %}
+{% block moduleContentBlock %}
   <div class="row">
     <div class="col">
       <div id="c{{ uid }}" class="{{ componentClass }} {{ componentBackgound }}">
         {{ bodytext }}
-      </div>  
+      </div>
     </div>
   </div>
 {% endblock %}
