[FEATURE][#13] Frontend-Integration des CE-M02-Text

--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/_index.scss
@@ -1,5 +1,9 @@
 // @import 'objects/index';
 @import 'buttons/index';
+@import 'dates/index';
+@import 'headings/index';
 @import 'icons/index';
 @import 'images/index';
+@import 'overlines/index';
 @import 'paragraphs/index';
+@import 'subheaders/index';
