--- a/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m00-module/m00-module.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m00-module/m00-module.twig
@@ -1,4 +1,4 @@
-<div class="c-module">
+<div class="m-module">
     {% include '@object/objects/object.twig' %}
     {% include '@component/components/component.twig' %}
 </div>
