--- a/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-colors/p-color.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-colors/p-color.twig
@@ -1,13 +1,11 @@
-<h1 class="h1 text-brand1">h1. text-success</h1>
+<h1 class="h1 text-primary">h1. text-primary</h1>
+<h3 class="h3 text-info1">h3. text-info1</h1>
 
-<p>You can use the mark tag to <mark>highlight</mark> or <a class="link-brand2" href="#">link-danger</a> text.</p>
+<p>You can use the mark tag to <mark>highlight</mark> or <a class="link-info2" href="#">link-info2</a> text.</p>
 
-<button type="button" class="btn btn-info">btn-info</button>
-<button type="button" class="btn btn-brand2">btn-brand2</button>
+<button type="button" class="btn btn-primary">btn-primary</button>
+<button type="button" class="btn btn-info1">btn-info1</button>
+<button type="button" class="btn btn-info2">btn-info2</button>
 
 <div class="border bg-primary" style="width: 300px; height: 300px;">bg-primary</div>
-<div class="border bg-brand1" style="width: 300px; height: 300px;">bg-brand1</div>
-<div class="border bg-brand2" style="width: 300px; height: 300px;">bg-brand2</div>
-
-
-bd-cyan-200
+<div class="border bg-secondary" style="width: 300px; height: 300px;">bg-secondary</div>
