--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/module/moduleheaders/moduleheader.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/module/moduleheaders/moduleheader.twig
@@ -1,4 +1,4 @@
-{% if header.header or tx_starter_overline or subheader or date %}
+{% if header.header or overline.tx_starter_overline or subheader.subheader or date %}
     <div class="c-moduleheader">
         {% include '@object/overlines/overline.twig' with overline only %}
         {% include '@object/headings/heading.twig' with header only %}
