--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
@@ -1,3 +1,3 @@
-<a href="{{ link.config.uri }}" target="{{ link.config.target }}" title="{{ link.config.title }}" class="{{ link.config.class }}">
+<a href="{{ metaData.link.config.uri }}" target="{{ metaData.link.config.target }}" title="{{ metaData.link.config.title }}" class="{{ metaData.link.config.class }}">
     {% block link %}{% endblock %}
 </a>
