[BUGFIX] Übergabe der Linkdaten korrigiert

--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/buttons/button.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/buttons/button.twig
@@ -1,3 +1,12 @@
-<div class="o-button">
-    Text button: {{ text }}
-</div>
+{% set link = {
+    'config':
+        {
+            'uri': link.config.uri,
+            'target': link.config.target,
+            'title': link.config.title,
+            'class': 'btn btn-' ~ link.config.class|default('primary')
+        }
+    }
+%}
+
+{% include '@object/links/link.twig' with link %}
