--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/module/modulefooters/modulefooter.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/module/modulefooters/modulefooter.twig
@@ -1,9 +1,9 @@
 {% if tx_starter_cta_link.config.uri %}
 
     <div class="c-modulefooter">
-        {% include '@object/buttons/button-cta/button-cta.twig' with {
-            'tx_starter_cta_link': tx_starter_cta_link,
-            'tx_starter_cta_text': tx_starter_cta_text,
+        {% include '@object/buttons/button.twig' with {
+            'link': tx_starter_cta_link,
+            'text': tx_starter_cta_text,
         } only %}
     </div>
 
