--- a/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m05-images/m05-images.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m05-images/m05-images.twig
@@ -1,37 +1,38 @@
 {#
-componentBackgound:   Wenn der Background fluid ist, dann wird er im Container gesetzt, ansonsten hier, in der Componente.
+componentBackground: Wenn der Background fluid ist, dann wird er im Container gesetzt, ansonsten hier, in der Componente.
 #}
 
-{% set componentBackgound = tx_starter_background_fluid ? '' : tx_starter_background %}
+{% set componentBackground = tx_starter_background_fluid ? '' : tx_starter_background %}
 
 
 
 {% extends '@component/containers/container.twig' %}
 
 {% block moduleContentBlock %}
-  <div class="row">
-    <div class="col">
-      <div id="c{{ uid }}" class="m-{{ CType }} {{ componentBackgound }}">
+
+    <div id="c{{ uid }}" class="m-{{ CType }} {{ componentBackground }}">
+
         {% include '@component/module/moduleheaders/moduleheader.twig' with {
-          'date': date,
-          'header': header,
-          'subheader': subheader,
-          'overline': overline,
+            'date': date,
+            'header': header,
+            'subheader': subheader,
+            'overline': overline,
         } only %}
 
-        <div class="row row-cols-1 row-cols-sm-{{ imagecols|default(1) }} row-cols-md-{{ tx_starter_imagecols_medium|default(1) }} row-cols-lg-{{ tx_starter_imagecols_large|default(1) }} g-3">
-          {% for picture in items %}
-            <div class="col">
-                {% include '@object/pictures/picture.twig' with picture only %}
-            </div>
-          {% endfor %}
+        <div
+            class="row row-cols-1 row-cols-sm-{{ imagecols|default(1) }} row-cols-md-{{ tx_starter_imagecols_medium|default(1) }} row-cols-lg-{{ tx_starter_imagecols_large|default(1) }} g-3">
+            {% for picture in items %}
+                <div class="col">
+                    {% include '@object/pictures/picture.twig' with picture only %}
+                </div>
+            {% endfor %}
         </div>
 
         {% include '@component/module/modulefooters/modulefooter.twig' with {
-          'tx_starter_cta_link': tx_starter_cta_link,
-          'tx_starter_cta_text': tx_starter_cta_text,
+            'tx_starter_cta_link': tx_starter_cta_link,
+            'tx_starter_cta_text': tx_starter_cta_text,
         } only %}
-      </div>
+
     </div>
-  </div>
+
 {% endblock %}
