--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/picture.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/picture.twig
@@ -10,55 +10,59 @@ figure: per default wird <figure> immer gewrappt, da das der Standard für Conte
 siehe: https://getbootstrap.com/docs/4.0/content/images/ (beachte auch Quellcode)
 #}
 
-{% set pictureContent %}
-    <picture>
-        {# WebP #}
-        {% if default.webP.default %}
+{% if default.uri.default %}
+
+    {% set pictureContent %}
+        <picture>
+            {# WebP #}
+            {% if default.webP.default %}
+                <source
+                type="image/webp"
+                data-srcset="
+                    {% for variant in variants %}
+                    {{ variant.webP.default }} {{ variant.mq }},
+                    {% endfor %}
+                "/>
+            {% endif %}
+            {# other image formats #}
             <source
-            type="image/webp"
-            data-srcset="
+                data-srcset="
                 {% for variant in variants %}
-                {{ variant.webP.default }} {{ variant.mq }},
+                    {{ variant.uri.default }} {{ variant.mq }},
                 {% endfor %}
             "/>
-        {% endif %}
-        {# other image formats #}
-        <source
-            data-srcset="
-            {% for variant in variants %}
-                {{ variant.uri.default }} {{ variant.mq }},
-            {% endfor %}
-        "/>
-        <img
-            src="{{ placeholder.uri.default }}"
-            data-src="{{ default.uri.default }}"
-            alt="{{ metaData.alternative }}"
-            title="{{ metaData.title }}"
-            data-sizes="auto"
-            class="o-image figure-img img-fluid lazyload {{ additionalClass }}"
-            style="display: block; width: 100%; max-width: 100%;"
-        />
-    </picture>
-{% endset %}
+            <img
+                src="{{ placeholder.uri.default }}"
+                data-src="{{ default.uri.default }}"
+                alt="{{ metaData.alternative }}"
+                title="{{ metaData.title }}"
+                data-sizes="auto"
+                class="o-image figure-img img-fluid lazyload {{ additionalClass }}"
+                style="display: block; width: 100%; max-width: 100%;"
+            />
+        </picture>
+    {% endset %}
 
-{% set linkContent %}
-    {% if metaData.link.config.uri %}
-            {% embed '@object/links/link.twig' with metaData.link %}
+    {% set linkContent %}
+        {% if metaData.link.config.uri %}
+            {% embed '@object/links/link.twig' %}
                 {% block link %}
                     {{ pictureContent }}
                 {% endblock %}
             {% endembed %}
-    {% else %}
-        {{ pictureContent }}
-    {% endif %}
-{% endset %}
+        {% else %}
+            {{ pictureContent }}
+        {% endif %}
+    {% endset %}
 
-{% if not figure %}
-    {{ linkContent }}
-{% else %}
-    {% embed '@object/pictures/_figure/figure.twig' %}
-        {% block figure %}
-            {{ linkContent }}
-        {% endblock %}
-    {% endembed %}
+    {% if not figure %}
+        {{ linkContent }}
+    {% else %}
+        {% embed '@object/pictures/_figure/figure.twig' %}
+            {% block figure %}
+                {{ linkContent }}
+            {% endblock %}
+        {% endembed %}
+    {% endif %}
+
 {% endif %}
