--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/collapses/collapse.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/collapses/collapse.twig
@@ -3,71 +3,61 @@
         <span class="" data-bs-toggle="collapse" data-bs-target="#item1-collapse" aria-expanded="true">
             Item 1 VVV
         </span>
-        <div class="collapse" id="item1-collapse">
-            <ul class="list-unstyled">
-                <li><a href="#">SubItem 11</a></li>
-                <li><a href="#">SubItem 12</a></li>
-                <li><a href="#">SubItem 13</a></li>
-            </ul>
-        </div>
+        <ul class="list-unstyled collapse" id="item1-collapse">
+            <li><a href="#">SubItem 11</a></li>
+            <li><a href="#">SubItem 12</a></li>
+            <li><a href="#">SubItem 13</a></li>
+        </ul>
     </li>
     <li class="">
         <span class="" data-bs-toggle="collapse" data-bs-target="#item2-collapse" aria-expanded="true">
             Item 2 VVV
         </span>
-        <div class="collapse" id="item2-collapse" style="">
-            <ul class="list-unstyled">
+            <ul class="list-unstyled collapse" id="item2-collapse">
                 <li>
                     <span class="" data-bs-toggle="collapse" data-bs-target="#item21-collapse" aria-expanded="true">
                         SubItem 21 VVV
                     </span>
-                    <div class="collapse" id="item21-collapse">
-                        <ul class="list-unstyled">
-                            <li>
-                                <span class="" data-bs-toggle="collapse" data-bs-target="#item211-collapse" aria-expanded="true">
-                                    SubSubItem 211 VVV
-                                </span>
-                                <div class="collapse" id="item211-collapse" style="">
-                                    <ul class="list-unstyled">
-                                        <li>
-                                            <div class="collapse" id="item21-collapse">
-                                                <ul class="list-unstyled">
-                                                    <li><a href="#">SubSubSubItem 2111</a></li>
-                                                    <li><a href="#">SubSubSubItem 2112</a></li>
-                                                    <li><a href="#">SubSubSubItem 2113</a></li>
-                                                    <li><a href="#">SubSubSubItem 2114</a></li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li><a href="#">SubItem 22</a></li>
-                                        <li><a href="#">SubItem 23</a></li>
-                                        <li><a href="#">SubItem 24</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a href="#">SubSubItem 212</a></li>
-                            <li><a href="#">SubSubItem 213</a></li>
-                            <li><a href="#">SubSubItem 214</a></li>
-                        </ul>
-                    </div>
+                    <ul class="list-unstyled collapse" id="item21-collapse">
+                        <li>
+                            <span class="" data-bs-toggle="collapse" data-bs-target="#item211-collapse" aria-expanded="true">
+                                SubSubItem 211 VVV
+                            </span>
+                            <ul class="list-unstyled collapse" id="item211-collapse">
+                                <li>
+                                    <div class="collapse" id="item21-collapse">
+                                        <ul class="list-unstyled">
+                                            <li><a href="#">SubSubSubItem 2111</a></li>
+                                            <li><a href="#">SubSubSubItem 2112</a></li>
+                                            <li><a href="#">SubSubSubItem 2113</a></li>
+                                            <li><a href="#">SubSubSubItem 2114</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li><a href="#">SubItem 22</a></li>
+                                <li><a href="#">SubItem 23</a></li>
+                                <li><a href="#">SubItem 24</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">SubSubItem 212</a></li>
+                        <li><a href="#">SubSubItem 213</a></li>
+                        <li><a href="#">SubSubItem 214</a></li>
+                    </ul>
                 </li>
                 <li><a href="#">SubItem 22</a></li>
                 <li><a href="#">SubItem 23</a></li>
                 <li><a href="#">SubItem 24</a></li>
             </ul>
-        </div>
     </li>
     <li class="">
         <a href="#">SubItem 3</a>
         <span class="" data-bs-toggle="collapse" data-bs-target="#item3-collapse" aria-expanded="true">
             VVV
         </span>
-        <div class="collapse" id="item3-collapse">
-            <ul class="list-unstyled">
-                <li><a href="#">SubItem 31</a></li>
-                <li><a href="#">SubItem 32</a></li>
-                <li><a href="#">SubItem 33</a></li>
-            </ul>
-        </div>
+        <ul class="list-unstyled collapse" id="item3-collapse">
+            <li><a href="#">SubItem 31</a></li>
+            <li><a href="#">SubItem 32</a></li>
+            <li><a href="#">SubItem 33</a></li>
+        </ul>
     </li>
 </ul>
