--- a/app/backend/packages/starter_freya/frontend/src/ui/0-draft/m00-module/m00-module.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-draft/m00-module/m00-module.twig
@@ -11,8 +11,15 @@ componentBackground: Wenn der Background fluid ist, dann wird er im Container ge
 {% block moduleContentBlock %}
 
     <div id="c{{ uid }}" class="m-{{ CType }} {{ componentBackground }}">
-        {% include '@object/objects/object.twig' %}
-        {% include '@component/components/component.twig' %}
+        
+        Beachte: Einbindung einer Component oder Object im Projekt mit Namespacing:
+        {# {% include '@object/objects/object.twig' %} #}
+        {# {% include '@component/components/component.twig' %} #}
+        
+        Hier nur mit dem Pfad zu 0-draft:
+        {% include '@draft/objects/object.twig' %}
+        {% include '@draft/components/component.twig' %}
+        
     </div>
 
 {% endblock %}
