--- a/app/backend/packages/starter_freya/frontend/src/ui/3-modules/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/3-modules/_index.scss
@@ -1,4 +1,4 @@
 // @import 'm00-module/index';
 @import 'm02-text/index';
-@import 'm05-images/index';
+@import 'm05-media/index';
 @import 'm26-accordion/index';
