--- a/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-bootstrap/p-bootstrap.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-bootstrap/p-bootstrap.twig
@@ -4,6 +4,23 @@
   <p class="stringster">stringster: Lorem ipsum text</p>
 </div>
 
+<div class="container c-container">
+  <ul class="nav">
+    <li class="nav-item">
+      <a class="nav-link active" href="#">Active</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+  </ul>
+</div>
+
 <div class="container-sm c-container">100% wide until small breakpoint</div>
 <div class="container-md c-container">100% wide until medium breakpoint</div>
 <div class="container-lg c-container">100% wide until large breakpoint</div>
