--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
@@ -1,3 +1,9 @@
+{#
+{% block link %} ist nötig, weil es hier embeded wird: src/ui/1-objects/pictures/picture.twig
+#}
+
+
+
 <a href="{{ config.uri }}" target="{{ config.target }}" title="{{ config.title }}" class="{{ config.class }}">
     {% block link %}{{ text }}{% endblock %}
 </a>
