--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/collapses/collapse.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/collapses/collapse.twig
@@ -1,6 +1,6 @@
 <ul class="list-unstyled">
     <li class="">
-        <span class="" data-bs-toggle="collapse" data-bs-target="#item1-collapse" aria-expanded="true">
+        <span class="" data-bs-toggle="collapse" data-bs-target="#item1-collapse">
             Item 1 VVV
         </span>
         <ul class="list-unstyled collapse" id="item1-collapse">
@@ -10,17 +10,17 @@
         </ul>
     </li>
     <li class="">
-        <span class="" data-bs-toggle="collapse" data-bs-target="#item2-collapse" aria-expanded="true">
+        <span class="" data-bs-toggle="collapse" data-bs-target="#item2-collapse">
             Item 2 VVV
         </span>
             <ul class="list-unstyled collapse" id="item2-collapse">
                 <li>
-                    <span class="" data-bs-toggle="collapse" data-bs-target="#item21-collapse" aria-expanded="true">
+                    <span class="" data-bs-toggle="collapse" data-bs-target="#item21-collapse">
                         SubItem 21 VVV
                     </span>
                     <ul class="list-unstyled collapse" id="item21-collapse">
                         <li>
-                            <span class="" data-bs-toggle="collapse" data-bs-target="#item211-collapse" aria-expanded="true">
+                            <span class="" data-bs-toggle="collapse" data-bs-target="#item211-collapse">
                                 SubSubItem 211 VVV
                             </span>
                             <ul class="list-unstyled collapse" id="item211-collapse">
@@ -51,7 +51,7 @@
     </li>
     <li class="">
         <a href="#">SubItem 3</a>
-        <span class="" data-bs-toggle="collapse" data-bs-target="#item3-collapse" aria-expanded="true">
+        <span class="" data-bs-toggle="collapse" data-bs-target="#item3-collapse">
             VVV
         </span>
         <ul class="list-unstyled collapse" id="item3-collapse">
