--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/_index.scss
@@ -1,5 +1,5 @@
 // @import './component/index';
 @import './accordions/index';
 @import './containers/index';
-@import './site/sitenavis/index';
+@import './navs/index';
 @import './teasers/index';
