--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/picture.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/pictures/picture.twig
@@ -5,7 +5,7 @@ additionalClass: optionale zusätzliche Klassen, wie z.B. .rounded oder .float-l
 
 pictureContent: nur das eigentliche Bild mit LazyLoading, picture wegen den Varienten (webp, ...)
 linkContent: Wrapper, wenn es einen Link gibt
-figure: per default wird <figure> immer gewrappt, da das der Standard für Contentbilder ist (desription immer möglich)
+figure: per default wird <figure> immer gewrappt, da das der Standard für Contentbilder ist (description immer möglich)
 
 siehe: https://getbootstrap.com/docs/4.0/content/images/ (beachte auch Quellcode)
 #}
