--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/navmmenu.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/navmmenu.twig
@@ -1,5 +1,16 @@
-<ul class="list-unstyled">
-    {% for item in items %}
-        {% include '@component/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig' with { item: item } only %}
-    {% endfor %}
-</ul>
+{#
+level: level der Navi, hier root, also 1
+#}
+
+{% set level = 1 %}
+
+<div class="o-navmmenu">
+    <ul class="nav level-{{ level }} justify-content-center">
+        {% for item in items %}
+            {% include '@component/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig' with { 
+                item: item,
+                level: level
+            } only %}
+        {% endfor %}
+    </ul>
+<div>
