--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_index.scss
@@ -1,1 +1,13 @@
-// code
+.o-navmmenu {
+    position: relative;
+    border-bottom: 1px solid black;
+
+    ul.level-2 {
+        position: absolute;
+        top: 100%;
+        right: 0;
+        left: 0;
+        border: 1px solid red;
+        background-color: white;
+    }
+}
