--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig
@@ -1,7 +1,8 @@
 {#
-link:   setzt den Context und modifiziert Link-Objekt
-text:   setzt den Context, damit '@object/links/link.twig' das verarbeiten kann
-level:  level der Navi, hier erste Unternavi, also mindestens 2
+link:       setzt den Context und modifiziert Link-Objekt
+text:       setzt den Context, damit '@object/links/link.twig' das verarbeiten kann
+level:      level der Navi, hier erste Unternavi, also mindestens 2
+level == 2: nur die 2. Ebene ist in einem Grid
 #}
 
 {% set link = 
@@ -20,11 +21,11 @@ level:  level der Navi, hier erste Unternavi, also mindestens 2
 
 
 
-<li id="{{ item.uid }}" class="nav-item">
+<li id="{{ item.uid }}" class="{{ (level == 3) ? 'col' : '' }} nav-item">
     {% include '@object/links/link.twig' with link %}
 
     {% if item.children %}
-        <ul class="level-{{ level }} list-unstyled">
+        <ul class="{{ (level == 2) ? 'row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4' : '' }} level-{{ level }} list-unstyled">
             {% for item in item.children %}
                 {% include '@component/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig' with { 
                     item: item,
