--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig
@@ -5,6 +5,7 @@ image:      setzt den Context, damit '@object/pictures/picture.twig' das verarbe
 level:      level der Navi, hier erste Unternavi, also mindestens 2
 level == 3: nur die 2. Ebene hat ein Bild (das ist etwas verwirrend, aber stimmt so ... dieser Code ruft sich rekursiv auf)
 level == 2: nur die 2. Ebene ist in einem Grid
+level <= 3: die Navigation ist zZ nur für drei Level ausgelegt
 #}
 
 {% set active = item.active ? 'active ' %}
@@ -32,7 +33,7 @@ level == 2: nur die 2. Ebene ist in einem Grid
     {% endif %}
     {% include '@object/links/link.twig' with link %}
 
-    {% if item.children %}
+    {% if item.children and level <= 3 %}
         <ul class="{{ (level == 2) ? 'row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4' : '' }} level-{{ level }} list-unstyled">
             {% for item in item.children %}
                 {% include '@component/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig' with { 
