--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/navmmenu.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/navmmenu.twig
@@ -4,7 +4,7 @@ level: level der Navi, hier root, also 1
 
 {% set level = 1 %}
 
-<div class="o-navmmenu">
+<div class="c-navmmenu">
     <ul class="nav level-{{ level }} justify-content-center">
         {% for item in items %}
             {% include '@component/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig' with { 
