--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
@@ -1,9 +1,18 @@
 {#
-{% block link %} ist nötig, weil es hier embeded wird: src/ui/1-objects/pictures/picture.twig
+Der Text wird im Context von Twig übergeben, daher scheint dies in Fractal leer.
+
+{% block link %}: ist nötig, weil Bilder embeded werden: src/ui/1-objects/pictures/picture.twig
+Bedeutet: Anstelle des Blocks wird das Bild eingesetzt.
 #}
 
 
 
-<a href="{{ config.uri }}" target="{{ config.target }}" title="{{ config.title }}" class="{{ config.class }}">
-    {% block link %}{{ text }}{% endblock %}
-</a>
+{% if config.uri %}
+    <a href="{{ config.uri }}" target="{{ config.target }}" title="{{ config.title }}" class="{{ config.class }}">
+        {% block link %}{{ text }}{% endblock %}
+    </a>
+{% else %}
+    <span class="{{ config.class }}">
+        {% block link %}{{ text }}{% endblock %}
+    </span>
+{% endif %}
