--- a/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-collapses/collapse.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-collapses/collapse.twig
@@ -1,8 +1,11 @@
 <ul class="list-unstyled">
     <li class="">
-        <span class="" data-bs-toggle="collapse" data-bs-target="#item1-collapse">
-            Item 1 VVV
-        </span>
+        <div>
+            <a href="#">Item 1</a>
+            <span class="" data-bs-toggle="collapse" data-bs-target="#item1-collapse">
+                VVV
+            </span>
+        </div>
         <ul class="list-unstyled collapse" id="item1-collapse">
             <li><a href="#">SubItem 11</a></li>
             <li><a href="#">SubItem 12</a></li>
@@ -50,7 +53,7 @@
             </ul>
     </li>
     <li class="">
-        <a href="#">SubItem 3</a>
+        <a href="#">Item 3</a>
         <span class="" data-bs-toggle="collapse" data-bs-target="#item3-collapse">
             VVV
         </span>
