--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navaccmenus/_navaccmenu-item/navaccmenu-item.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navaccmenus/_navaccmenu-item/navaccmenu-item.twig
@@ -22,7 +22,7 @@ active:     Flag, wenn ein Menüpunkt in der Rootline ist.
                 'uri': item.link.config.uri,
                 'target': item.link.config.target,
                 'title': item.link.config.title,
-                'class': 'nav-link ' ~ active ~ current ~ item.link.config.class
+                'class': 'nav-link flex-grow-1 ' ~ active ~ current ~ item.link.config.class
             }
     }
 %}
@@ -35,9 +35,7 @@ active:     Flag, wenn ein Menüpunkt in der Rootline ist.
     <div class="d-flex justify-content-between align-items-center">
         {% include '@object/links/link.twig' with link %}
         {% if item.children and level <= 3 %}
-            <span data-bs-toggle="collapse" data-bs-target="#item{{ item.uid }}-collapse">
-                VVV
-            </span>
+            <button class="collapse-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#item{{ item.uid }}-collapse"></button>
         {% endif %}
     </div>
 
