--- a/app/backend/packages/starter_freya/frontend/src/scss/5-ui/collapse.scss
+++ b/app/backend/packages/starter_freya/frontend/src/scss/5-ui/collapse.scss
@@ -1,4 +1,4 @@
-// Bootstrap collapse hat keinen Button, daher wird hier der Accordion-Button kopiert und angepasst.
+// Bootstrap collapse hat keinen Button, daher wird hier der Accordion-Button adaptiert und angepasst.
 
 .collapse-button {
     @extend .accordion-button;
