--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navmmenus/_navmmenu-item/navmmenu-item.twig
@@ -8,12 +8,14 @@ level:      level der Navi, hier erste Unternavi, also mindestens 2
 level == 3: nur die 2. Ebene hat ein Bild (das ist etwas verwirrend, aber stimmt so ... dieser Code ruft sich rekursiv auf)
 level == 2: nur die 2. Ebene ist in einem Grid
 level <= 3: die Navigation ist zZ nur für max drei Level ausgelegt
+children:   Flag, wenn es Unterseiten gibt.
+current:    Flag für den Menüpunkt, der die aktuelle Seite repräsentiert.
+active:     Flag, wenn ein Menüpunkt in der Rootline ist.
 #}
-
-
 
 {% set children = item.children ? 'has-children ' %}
 {% set current = item.current ? 'current ' %}
+{% set active = item.active ? 'active ' %}
 {% set link = 
     {
         'config':
@@ -32,7 +34,7 @@ level <= 3: die Navigation ist zZ nur für max drei Level ausgelegt
 
 
 <li id="{{ item.uid }}" class="nav-item {{ children }}">
-    {% if level == 3 %}
+    {% if level == 3 and item.image %}
         {% embed '@object/links/link.twig' with link %}
             {% block link %}
                 {% include '@object/pictures/picture.twig' with image only %}
