--- a/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-images/p-image.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/0-playground/p-images/p-image.twig
@@ -1,8 +1,11 @@
 <h3>img tag</h3>
-<img src="/assets/images/logo.png" alt="image">
+<img src="/assets/images/_dev/logo.png" alt="image">
 
 <h3>config.js</h3>
 <img src="{{ image }}" alt="image">
 
-<h3>Sass: background image</h3>
-<div class="o-image o-image__background"></div>
+<h3>Sass / css: background image</h3>
+<div class="o-image o-image__background" style="width: 100px; height: 100px; background-image: url('/assets/images/_dev/logo.png'); background-size: contain;"></div>
+
+<h3>js</h3>
+Siehe src/ui/0-playground/p-images/index.js
