--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/_index.scss
@@ -2,4 +2,5 @@
 @import './accordions/index';
 @import './containers/index';
 @import './navigation/index';
+@import './site/siteheaders/index';
 @import './teasers/index';
