--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/siteheader.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/siteheader.twig
@@ -1,1 +1,23 @@
-siteheader
+<div class="c-siteheader">
+    <div class="c-siteheader__contact d-flex justify-content-between align-items-center">
+        <div>
+            contact
+        </div>
+        <div>
+            <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/logo.svg">
+        </div>
+        <div>
+            <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/sm-facebook.svg">
+            <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/sm-instagram.svg">
+            <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/sm-twitter.svg">
+            <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/sm-linkedin.svg">
+            <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/sm-xing.svg">
+        </div>
+    </div>
+    <hr>
+    <div class="c-siteheader__nav">
+        <div>
+            navi
+        </div>
+    </div>
+</div>
